# magma

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  circt-hash.txt  comb.py  common.py  common_visitors.py  compile_to_mlir.py  complex_bind_bind_files.list  conftest.py  debug_utils.py  emitter.py  examples.py  graph_base.py  graph_lib.py  graph_utils.py  graph_visitor.py  magma.sublime-project  magma.sublime-workspace  magma_graph.py  magma_graph_passes.py  magma_graph_utils.py  magma_visitors.py  mkdocs.yml  mlir_context.py  mlir_emitter.py  mlir_graph.py  mlir_passes.py  mlir_type.py  mlir_utils.py  mlir_value.py  mlir_visitors.py  mlir_wrapper.py  parser.out  parsetab.py  (+14 more)
.magma/: basic_func.py  basic_function_call.py  basic_if.py  if_statement_nested.py  logic.py  return_magma_named_tuple.py  return_magma_tuple.py  return_py_tuple.py  ternary.py  ternary_nested.py  ternary_nested2.py  txmod_logic.py
.travis/: deploy.sh  install_coreir.sh
benchmarks/: README.md  alu.py  array_2d_bench.py  array_bench.py  array_slice_2dbench.py  array_slice_bench.py  bench.py  benchmark_utils.py  combined.py  debug.py  linear_tree.py  name.csv  name.py  profile_linear.py  profile_linear_2d.py
debug-ext/: CMakeLists.txt  debug.cc
doc/: README.md  circuit_definitions.md  circuits.md  conversions.md  cpugen.md  example.md  functions.md  higher_order_circuits.md  hls.md  install.md  internals.md  ir.md  logging.md  magma.md  operators.md  overview.md  tools.md  types.md  types_and_values.md  usage.md
docs/: FAQ.md  bind.md  bind2.md  cheat_sheet.md  circuit_definitions.md  circuit_metaprogramming.md  compile.md  compile_guard.md  config.md  debugging.md  developers.md  display.md  display_and_logging.md  higher_order_circuits.md  index.md  inline_combinational.md  inline_verilog.md  logging.md  magma_2_migration_guide.md  mantle_primitives.md  mantle_to_magma_primitives_migration_guide.md  metaclasses.md  mlir.md  new_style_syntax.md  operators.md  overview.md  passes.md  primitives.md  simulation.md  smart_bits.md  spec.md  split_verilog.md  syntaxes.md  system_architecture.md  types_and_values.md  uniquification.md  verilog_to_magma.md  when_internals.md
examples/: adder.py  even_odd_sort.py  fifo-coreir.v  fifo-mlir.v  fifo.py  full_adder.py  lfsr.csv  lfsr.py  odd_even_sort.py  register_file.py  (+2 more)
(+2142 files in other folders)
